Update Calculator.java
重構了Calculator類，僅保留括號堆棧法